# touch-grass

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yml  build.sh  package-lock.json  package.json  tailwind.config.js
assets/: homepage.html  homepage.js  index.js  manifest.json
extension/: .gitignore  background.js  homepage.html  homepage.js  index.js  manifest.json  output.css  touch_grass.js  touch_grass_bg.js  touch_grass_bg.wasm
extension/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
src/: config.rs  content_script.rs  lib.rs
src/extension_ui/: homepage.rs  input.css
src/storage/: background.rs  config.rs  mod.rs
