[package]
name = "touch-grass"
version = "0.5.0"
edition = "2021"
description = "A tool that helps you with your YouTube addiction."
license = "MIT"
repository = "https://github.com/VivekYadav7272/touch-grass.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
dioxus = { version = "0.5.1", features = ["web"] }
js-sys = "0.3.69"
serde = "1.0.195"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.42"
web-extensions-sys = { version = "0.4.1", features = ["firefox"] }
web-sys = { version = "0.3.69", features = [
    "Window",
    "Document",
    "Element",
    "HtmlImageElement",
    "Storage",
    "console",
    "HtmlCollection",
] }
